versions/v0.4/spec.md
# coding-policy-ai-auditor 仕様書

| 項目 | 内容 |
|------|------|
| バージョン | v0.4 |
| 作成日 | 2026-01-28 |

---

## 1. 概要

### 1.1 システム概要

本システムは、Javaコードに対して「判断系コーディング規約」（意味的・主観的でLint等では検出しづらい規約）の準拠性をLLMを使って点検するオーディターです。

### 1.2 対象ユーザー

- コードレビュー担当者
- 品質管理担当者
- 開発リーダー

### 1.3 システム構成

```
┌─────────────────┐     HTTP/REST      ┌─────────────────┐
│   フロントエンド   │ ◄──────────────► │   バックエンド    │
│  (React + Vite)  │                   │   (FastAPI)     │
└─────────────────┘                   └────────┬────────┘
                                               │
                    ┌──────────────────────────┼──────────────────────────┐
                    │                          │                          │
              ┌─────▼─────┐            ┌───────▼───────┐          ┌───────▼───────┐
              │  LLM API   │            │  静的解析ツール  │          │ 変換ライブラリ │
              │ (Bedrock/  │            │ (Checkstyle/   │          │ (excel2md/    │
              │  Anthropic/│            │  PMD/Ruff等)   │          │  markitdown)  │
              │  OpenAI)   │            └───────────────┘          └───────────────┘
              └───────────┘
```

---

## 2. 機能要件

### 2.1 機能一覧

| No | 機能名 | 概要 | 優先度 |
|----|--------|------|--------|
| F-01 | ファイルアップロード | 規約ファイル・コードファイルのアップロード | 必須 |
| F-02 | Excel変換 | ExcelファイルをMarkdown形式に変換 | 必須 |
| F-03 | 行番号付与 | コードファイルに行番号を付与 | 必須 |
| F-04 | AI監査実行 | LLMによるコーディング規約準拠性チェック | 必須 |
| F-05 | 静的解析実行 | Checkstyle/PMD等による静的コード解析 | オプション |
| F-06 | 結果表示 | 監査結果の表示・判定 | 必須 |
| F-07 | レポート出力 | Markdown/ZIP形式でのレポートダウンロード | 必須 |
| F-08 | 設定管理 | LLM設定・システムプロンプト管理 | 必須 |
| F-09 | 設定ファイル生成 | reviewer-config.mdの生成ツール | オプション |

### 2.2 機能詳細

#### F-01: ファイルアップロード

| 項目 | 内容 |
|------|------|
| 対応形式（規約） | Excel (.xlsx, .xls), Markdown (.md) |
| 対応形式（コード） | Java (.java), Python (.py), その他テキストファイル |
| ファイルサイズ上限 | 規約: 10MB, コード: 5MB |
| アップロード方法 | ドラッグ&ドロップ または ファイル選択ダイアログ |

#### F-02: Excel変換

| 項目 | 内容 |
|------|------|
| 変換ツール | MarkItDown, excel2md, excel2md-mermaid |
| 入力形式 | Excel (.xlsx, .xls) |
| 出力形式 | Markdown (.md) |
| 特殊対応 | AIオーディター形式Excelのスプレッドシート表示 |

##### F-02-A: AIオーディター形式Excel

###### ファイル構造

| シート | 内容 | 必須 |
|--------|------|------|
| 1シート目 | コーディング規約一覧 | ○ |
| 2シート目以降 | 規約ごとの詳細説明 | - |

- サンプルファイル: `docs/ai-auditor-format/20260121AIオーディター形式サンプルコーディング規約.xlsx`

###### 画面表示仕様

| 項目 | 内容 |
|------|------|
| 表示ライブラリ | Tabulator |
| 表示形式 | スプレッドシート形式（Excel全体を表示） |
| 編集機能 | なし（読み取り専用） |
| シート切替 | タブによるシート切り替え |
| シートリンク | セル内の詳細シートリンクをクリックで該当タブに切り替え |

###### 規約選択機能

| 項目 | 内容 |
|------|------|
| 選択対象 | 1シート目のコーディング規約各行 |
| 初期状態 | 全規約選択状態 |
| 選択UI | チェックボックスによる行選択 |

###### Markdown変換ロジック

| 対象 | 変換ルール |
|------|------------|
| 1シート目（規約一覧） | 選択された規約のみMarkdownに含める |
| 2シート目以降（詳細） | 選択された規約にリンクされている詳細シートのみ含める |
| 複数規約が同一詳細シートにリンク | いずれか1つでも選択されていれば詳細シートを含める |

#### F-03: 行番号付与

| 項目 | 内容 |
|------|------|
| 形式 | 4桁右寄せ + コロン + 半角スペース |
| 例 | `   1: public class Sample {` |
| 文字エンコーディング | UTF-8, Shift_JIS（自動判定） |

#### F-04: AI監査実行

| 項目 | 内容 |
|------|------|
| 実行回数 | 2回（一貫性確認のため） |
| 対応LLMプロバイダー | AWS Bedrock, Anthropic, OpenAI |
| タイムアウト | 5分 |
| 入力構成 | システムプロンプト + 規約 + コード + 静的解析結果（任意） |

#### F-05: 静的解析実行

| 項目 | 内容 |
|------|------|
| Java用ツール | Checkstyle, PMD |
| Python用ツール | Ruff, Flake8, Pylint |
| 実行タイミング | AI監査前（オプション） |
| 結果連携 | 静的解析サマリーをLLMコンテキストに含める |

#### F-06: 結果表示

| 項目 | 内容 |
|------|------|
| 判定種別 | OK, 要確認（Warning）, NG |
| 表示形式 | タブ切り替え（静的解析 / 監査#1 / 監査#2） |
| 判定ロジック | LLM出力から「OK」「NG」「要確認」キーワードを検出 |

#### F-07: レポート出力

| 項目 | 内容 |
|------|------|
| 個別ダウンロード | Markdownレポート |
| 一括ダウンロード | ZIP（レポート + コード + メタデータ） |
| クリップボード | コピー機能 |

#### F-08: 設定管理

| 項目 | 内容 |
|------|------|
| LLM設定 | プロバイダー, モデル, 認証情報, 最大トークン |
| システムプロンプト | プリセット管理（役割/目的/フォーマット/注意事項） |
| 設計書種別 | カスタム種別の追加・編集・削除 |
| 永続化 | ブラウザのlocalStorage |

#### F-09: 設定ファイル生成

| 項目 | 内容 |
|------|------|
| 出力形式 | reviewer-config.md |
| 設定項目 | LLM設定, 設計書種別, システムプロンプトプリセット |

---

## 3. 画面仕様

### 3.1 画面遷移図

```
┌─────────────┐
│  メイン画面   │◄─────────────────────────────┐
│  (main)     │                              │
└──────┬──────┘                              │
       │ [監査実行]                           │
       ▼                                     │
┌─────────────┐                              │
│  実行中画面   │                              │
│ (executing) │                              │
└──────┬──────┘                              │
       │ 完了                                 │
       ▼                                     │
┌─────────────┐         [戻る]               │
│  結果画面    │─────────────────────────────►│
│  (result)   │                              │
└─────────────┘
```

### 3.2 メイン画面

```
┌──────────────────────────────────────────────────────────────────┐
│ [⚙️ 設定]                                                        │
│                                                                  │
│           コーディング規約-Javaプログラム AIオーディター            │
├──────────────────────────────────────────────────────────────────┤
│                                                                  │
│  ┌─────────────────────────────────────────────────────────────┐│
│  │ 📋 規約                                                      ││
│  │ ┌─────────────────────┬─────────────────────┐              ││
│  │ │ AIオーディター形式    │ Excelマークダウン変換 │              ││
│  │ └─────────────────────┴─────────────────────┘              ││
│  │                                                             ││
│  │  ┌─────────────────────────────────────────────────────┐  ││
│  │  │                                                     │  ││
│  │  │     ここにExcelファイルをドラッグ&ドロップ            │  ││
│  │  │           または クリックして選択                     │  ││
│  │  │                                                     │  ││
│  │  └─────────────────────────────────────────────────────┘  ││
│  │                                                             ││
│  │  ファイル一覧:                                               ││
│  │  ┌────────────────┬──────────┬──────────┬────────┐        ││
│  │  │ ファイル名      │ 種別     │ ツール   │ 操作   │        ││
│  │  ├────────────────┼──────────┼──────────┼────────┤        ││
│  │  │ 規約.xlsx      │ メイン   │ excel2md │ [×]   │        ││
│  │  │ 補足.md        │ 参照     │ -        │ [×]   │        ││
│  │  └────────────────┴──────────┴──────────┴────────┘        ││
│  └─────────────────────────────────────────────────────────────┘│
│                                                                  │
│  ┌─────────────────────────────────────────────────────────────┐│
│  │ 📝 プログラム                                                ││
│  │                                                             ││
│  │  ┌─────────────────────────────────────────────────────┐  ││
│  │  │     ここにファイルをドラッグ&ドロップ                  │  ││
│  │  └─────────────────────────────────────────────────────┘  ││
│  │                                                             ││
│  │  ファイル一覧:                     [行番号を付与]          ││
│  │  ┌────────────────┬──────────┬────────┐                   ││
│  │  │ ファイル名      │ 行数     │ 操作   │                   ││
│  │  ├────────────────┼──────────┼────────┤                   ││
│  │  │ Sample.java    │ 150行    │ [×]   │                   ││
│  │  └────────────────┴──────────┴────────┘                   ││
│  └─────────────────────────────────────────────────────────────┘│
│                                                                  │
│  ┌─────────────────────────────────────────────────────────────┐│
│  │ 💬 システムプロンプト                              [▼ 展開] ││
│  │  プリセット: [デフォルト ▼]                                 ││
│  │  役割: あなたはコーディング規約の専門家です...              ││
│  └─────────────────────────────────────────────────────────────┘│
│                                                                  │
│  ┌─────────────────────────────────────────────────────────────┐│
│  │ 🔢 トークン使用量推定: 約 15,234 トークン                    ││
│  │    ⚠️ 上限に近づいています                                  ││
│  └─────────────────────────────────────────────────────────────┘│
│                                                                  │
│  ┌─────────────────────────────────────────────────────────────┐│
│  │ 🛠️ 静的解析設定                                             ││
│  │  [✓] 静的解析を実行する                                     ││
│  │                                                             ││
│  │  利用可能なツール:                                          ││
│  │  ├─ Java: Checkstyle (v10.21.2) ✅, PMD (v7.10.0) ✅       ││
│  │  └─ Python: Ruff (v0.9.3) ✅, Pylint (v3.3.3) ✅          ││
│  └─────────────────────────────────────────────────────────────┘│
│                                                                  │
│                    ┌──────────────────────┐                     │
│                    │      監査実行        │                     │
│                    └──────────────────────┘                     │
│                                                                  │
└──────────────────────────────────────────────────────────────────┘
```

### 3.3 実行中画面

```
┌──────────────────────────────────────────────────────────────────┐
│                                                                  │
│                                                                  │
│                           ⟳                                     │
│                      (回転アニメーション)                          │
│                                                                  │
│                    AIが監査を実行中...                            │
│                                                                  │
│               (1回目の監査を実行しています)                        │
│                         1/2                                      │
│                                                                  │
│                                                                  │
│                  静的解析 ●────────○ AI監査                     │
│                          (進捗インジケーター)                      │
│                                                                  │
│                                                                  │
│        ※ 5分以上かかる場合はタイムアウトする可能性があります        │
│                                                                  │
│                                                                  │
└──────────────────────────────────────────────────────────────────┘
```

### 3.4 結果画面

```
┌──────────────────────────────────────────────────────────────────┐
│                                                                  │
│  ┌────────────────┬────────────────┬────────────────┐           │
│  │  静的解析結果   │   監査結果 #1   │   監査結果 #2   │           │
│  └────────────────┴────────────────┴────────────────┘           │
│                                                                  │
│  ╔════════════════════════════════════════════════════════════╗ │
│  ║                     総合判定                               ║ │
│  ║  ┌──────────────────────────────────────────────────────┐ ║ │
│  ║  │  ❌ 問題あり                                         │ ║ │
│  ║  │                                                      │ ║ │
│  ║  │  NG: 3件  |  要確認: 1件  |  OK: 5件               │ ║ │
│  ║  └──────────────────────────────────────────────────────┘ ║ │
│  ╚════════════════════════════════════════════════════════════╝ │
│                                                                  │
│  ┌─────────────────────────────────────────────────────────────┐│
│  │ 📋 監査情報                                                 ││
│  │                                                             ││
│  │  実行日時: 2026-01-23 10:30:45                             ││
│  │  モデル: claude-haiku-4-5-20251001                         ││
│  │  プロバイダー: bedrock                                     ││
│  │  入力トークン: 15,234                                      ││
│  │  出力トークン: 3,421                                       ││
│  └─────────────────────────────────────────────────────────────┘│
│                                                                  │
│  ┌─────────────────────────────────────────────────────────────┐│
│  │ 📄 監査レポート                                             ││
│  │                                                             ││
│  │  # 監査結果レポート                                         ││
│  │                                                             ││
│  │  ## 1. 規約9: コンパイル単位要素の順序                      ││
│  │                                                             ││
│  │  ### 判定: NG                                               ││
│  │                                                             ││
│  │  **違反箇所:**                                              ││
│  │  - 45行目: import文の順序が不正です                        ││
│  │                                                             ││
│  │  **修正案:**                                                ││
│  │  import文をアルファベット順に並べ替えてください...          ││
│  │                                                             ││
│  └─────────────────────────────────────────────────────────────┘│
│                                                                  │
│  ┌──────────┐ ┌──────────┐ ┌────────────────┐ ┌────────┐      │
│  │ 📋 コピー │ │ ⬇️ DL   │ │ 📦 ZIP DL     │ │ 🔙 戻る │      │
│  └──────────┘ └──────────┘ └────────────────┘ └────────┘      │
│                                                                  │
└──────────────────────────────────────────────────────────────────┘
```

### 3.5 静的解析結果タブ

```
┌──────────────────────────────────────────────────────────────────┐
│                                                                  │
│  ┌─────────────────────────────────────────────────────────────┐│
│  │ 📊 解析結果サマリー                                          ││
│  │                                                             ││
│  │  総検出数: 47件                                             ││
│  │                                                             ││
│  │  ┌─────────────────────┐  ┌─────────────────────┐         ││
│  │  │ ツール別            │  │ 重要度別            │         ││
│  │  │ ├─ Checkstyle: 12  │  │ ├─ Error: 8        │         ││
│  │  │ ├─ PMD: 15         │  │ ├─ Warning: 39     │         ││
│  │  │ └─ Ruff: 20        │  │ └─ Info: 0         │         ││
│  │  └─────────────────────┘  └─────────────────────┘         ││
│  └─────────────────────────────────────────────────────────────┘│
│                                                                  │
│  ┌─────────────────────────────────────────────────────────────┐│
│  │ 🔧 ツール実行情報                                           ││
│  │                                                             ││
│  │  実行ID: 550e8400-e29b-41d4-a716-...                       ││
│  │  実行日時: 2026-01-23T10:30:45.123Z                        ││
│  │                                                             ││
│  │  ┌──────────┬────────┬────────┬────────┬────────┐         ││
│  │  │ ツール   │ Ver    │ 状態   │ 時間   │ 検出数 │         ││
│  │  ├──────────┼────────┼────────┼────────┼────────┤         ││
│  │  │Checkstyle│ 10.21.2│ 完了   │ 234ms  │ 12    │         ││
│  │  │PMD       │ 7.10.0 │ 完了   │ 521ms  │ 15    │         ││
│  │  │Ruff      │ 0.9.3  │ 完了   │ 89ms   │ 20    │         ││
│  │  └──────────┴────────┴────────┴────────┴────────┘         ││
│  └─────────────────────────────────────────────────────────────┘│
│                                                                  │
│  ┌─────────────────────────────────────────────────────────────┐│
│  │ 📋 違反一覧                                                 ││
│  │                                                             ││
│  │  重要度: [全て ▼]  ファイル: [全て ▼]                      ││
│  │                                                             ││
│  │  ┌────────────────────────────────────────────────────┐   ││
│  │  │ Sample.java:45 | Checkstyle | Error                │   ││
│  │  │ VariableNameCheck                                  │   ││
│  │  │ 変数名が命名規則に違反しています                      │   ││
│  │  └────────────────────────────────────────────────────┘   ││
│  │  ┌────────────────────────────────────────────────────┐   ││
│  │  │ Sample.java:102 | PMD | Warning                    │   ││
│  │  │ UnusedVariable                                     │   ││
│  │  │ 未使用の変数が宣言されています                        │   ││
│  │  └────────────────────────────────────────────────────┘   ││
│  └─────────────────────────────────────────────────────────────┘│
│                                                                  │
│  ┌────────────────────┐                                        │
│  │ 📦 静的解析ZIP DL  │                                        │
│  └────────────────────┘                                        │
│                                                                  │
└──────────────────────────────────────────────────────────────────┘
```

### 3.6 設定モーダル

```
╔═══════════════════════════════════════════════════════════════════╗
║                          設定                              [×]   ║
╠═══════════════════════════════════════════════════════════════════╣
║                                                                   ║
║  📋 アプリケーション情報                                           ║
║  ┌───────────────────────────────────────────────────────────┐  ║
║  │ 名前: coding-policy-ai-auditor                            │  ║
║  │ バージョン: v0.3.0                                        │  ║
║  │ 著作権: © 株式会社エルブズ                                 │  ║
║  └───────────────────────────────────────────────────────────┘  ║
║                                                                   ║
║  🔧 LLM設定                                                      ║
║  ┌───────────────────────────────────────────────────────────┐  ║
║  │ プロバイダー: [Bedrock ▼]                                 │  ║
║  │ モデル:       [claude-haiku-4-5-20251001-v1:0 ▼]         │  ║
║  │ 最大トークン: [16384        ]                             │  ║
║  │                                                           │  ║
║  │ AWS Access Key ID:     [••••••••••••••••]                │  ║
║  │ AWS Secret Access Key: [••••••••••••••••]                │  ║
║  │ リージョン:            [ap-northeast-1   ]                │  ║
║  │                                                           │  ║
║  │                              [🔗 接続テスト]              │  ║
║  └───────────────────────────────────────────────────────────┘  ║
║                                                                   ║
║  📁 設定ファイル                                                  ║
║  ┌───────────────────────────────────────────────────────────┐  ║
║  │ [📂 ファイルを選択]                                       │  ║
║  │ 読み込んだファイル: reviewer-config.md                    │  ║
║  │                                                           │  ║
║  │ [💾 ブラウザに保存]  [🗑️ 保存をクリア]                    │  ║
║  └───────────────────────────────────────────────────────────┘  ║
║                                                                   ║
║  📊 設計書種別                                                    ║
║  ┌───────────────────────────────────────────────────────────┐  ║
║  │ ┌────────────────┬──────────────────────┬────────┐       │  ║
║  │ │ 種別           │ 説明                 │ 操作   │       │  ║
║  │ ├────────────────┼──────────────────────┼────────┤       │  ║
║  │ │ 要件仕様書     │ 要件定義ドキュメント │ [×]   │       │  ║
║  │ │ 基本設計書     │ 大枠の設計           │ [×]   │       │  ║
║  │ │ 詳細設計書     │ 詳細な設計           │ [×]   │       │  ║
║  │ └────────────────┴──────────────────────┴────────┘       │  ║
║  │                                          [＋ 追加]        │  ║
║  └───────────────────────────────────────────────────────────┘  ║
║                                                                   ║
║                                               [閉じる]           ║
╚═══════════════════════════════════════════════════════════════════╝
```

---

## 4. 処理フロー

### 4.1 監査実行フロー

```
┌─────────────┐
│   開始      │
└──────┬──────┘
       │
       ▼
┌─────────────────────────────────────────────────────────────────┐
│ 1. ファイル準備                                                  │
│    ├─ 規約ファイルがExcelの場合 → Markdown変換API呼び出し        │
│    └─ コードファイル → 行番号付与API呼び出し                      │
└──────────────────────────────────────────────────────────────────┘
       │
       ▼
┌─────────────────────────────────────────────────────────────────┐
│ 2. 静的解析（オプション）                                        │
│    ├─ 静的解析有効？ ─ No ─→ スキップ                           │
│    │         │                                                  │
│    │        Yes                                                 │
│    │         ▼                                                  │
│    ├─ ツール利用可能確認API呼び出し                              │
│    ├─ 静的解析実行API呼び出し                                    │
│    └─ 結果サマリーをLLMコンテキストに追加                        │
└──────────────────────────────────────────────────────────────────┘
       │
       ▼
┌─────────────────────────────────────────────────────────────────┐
│ 3. AI監査実行（1回目）                                           │
│    ├─ システムプロンプト構築                                     │
│    │   └─ 役割 + 目的 + フォーマット + 注意事項                  │
│    ├─ ユーザーメッセージ構築                                     │
│    │   └─ 規約（メイン→参照順） + コード + 静的解析サマリー      │
│    ├─ 監査実行API呼び出し                                        │
│    │   └─ LLMプロバイダー選択 → API呼び出し → レスポンス取得     │
│    └─ 結果保存                                                   │
└──────────────────────────────────────────────────────────────────┘
       │
       ▼
┌─────────────────────────────────────────────────────────────────┐
│ 4. AI監査実行（2回目）                                           │
│    └─ 1回目と同一処理（一貫性確認のため）                        │
└──────────────────────────────────────────────────────────────────┘
       │
       ▼
┌─────────────────────────────────────────────────────────────────┐
│ 5. 結果判定                                                      │
│    ├─ LLM出力から判定キーワード検出                              │
│    │   ├─ 「NG」または ❌ → NG判定                              │
│    │   ├─ 「要確認」または ⚠️ → Warning判定                     │
│    │   └─ 「OK」または ✅ → OK判定                              │
│    └─ 総合判定の算出                                             │
└──────────────────────────────────────────────────────────────────┘
       │
       ▼
┌─────────────┐
│   完了      │
└─────────────┘
```

### 4.2 Excel変換フロー

```
┌─────────────┐
│ Excelファイル│
└──────┬──────┘
       │
       ▼
┌─────────────────────┐
│ ファイル形式判定     │
│ (.xlsx / .xls)      │
└──────┬──────────────┘
       │
       ▼
┌─────────────────────┐
│ 変換ツール選択       │
│ ├─ MarkItDown       │
│ ├─ excel2md         │
│ └─ excel2md-mermaid │
└──────┬──────────────┘
       │
       ▼
┌─────────────────────┐
│ Markdown変換処理     │
└──────┬──────────────┘
       │
       ▼
┌─────────────────────┐
│ 変換結果返却         │
│ (Markdownテキスト)   │
└─────────────────────┘
```

### 4.3 LLMプロバイダー選択フロー

```
┌─────────────────────┐
│ LLM設定確認          │
└──────┬──────────────┘
       │
       ├─ 設定あり ─────────────────────────────────────┐
       │                                               │
       ▼                                               ▼
┌─────────────────────┐                    ┌─────────────────────┐
│ プロバイダー判定     │                    │ システムLLM使用      │
│                     │                    │ (Bedrock + IAMロール)│
│ ├─ bedrock         │                    └─────────────────────┘
│ │   └→ BedrockService
│ │                   │
│ ├─ anthropic       │
│ │   └→ AnthropicService
│ │                   │
│ └─ openai          │
│     └→ OpenAIService│
└─────────────────────┘
```

---

## 5. API仕様

### 5.1 エンドポイント一覧

| メソッド | パス | 機能 |
|----------|------|------|
| GET | /api/convert/available-tools | 利用可能な変換ツール一覧取得 |
| POST | /api/convert/excel-to-markdown | Excel→Markdown変換 |
| POST | /api/convert/add-line-numbers | 行番号付与 |
| POST | /api/convert/auditor-excel-spreadsheet | AIオーディター形式Excel解析 |
| POST | /api/audit | 監査実行 |
| POST | /api/test-connection | LLM接続テスト |
| GET | /api/static-analysis/tools | 静的解析ツール利用可能確認 |
| POST | /api/static-analysis/analyze | 静的解析実行 |

### 5.2 API詳細

#### POST /api/audit

**リクエスト:**

| パラメータ | 型 | 必須 | 説明 |
|------------|-----|------|------|
| rules | RuleFile[] | ○ | 規約ファイル配列 |
| codes | CodeFile[] | ○ | コードファイル配列 |
| system_prompt | SystemPrompt | ○ | システムプロンプト |
| llm_config | LLMConfig | - | LLM設定（省略時はシステムLLM） |
| static_analysis_summary | string | - | 静的解析サマリー |

**レスポンス:**

| パラメータ | 型 | 説明 |
|------------|-----|------|
| success | boolean | 成功フラグ |
| report | string | 監査レポート（Markdown） |
| meta | AuditMeta | 監査メタ情報 |

#### POST /api/static-analysis/analyze

**リクエスト:**

| パラメータ | 型 | 必須 | 説明 |
|------------|-----|------|------|
| files | StaticAnalysisFile[] | ○ | 解析対象ファイル配列 |

**レスポンス:**

| パラメータ | 型 | 説明 |
|------------|-----|------|
| run_id | string | 実行ID |
| timestamp | string | 実行日時 |
| tools | StaticAnalysisToolResult[] | ツール別実行結果 |
| summary | StaticAnalysisSummary | サマリー |
| violations | StaticAnalysisViolation[] | 違反一覧 |

---

## 6. データ構造

### 6.1 主要データ型

#### RuleFile（規約ファイル）

| フィールド | 型 | 説明 |
|------------|-----|------|
| filename | string | ファイル名 |
| content | string | ファイル内容（Markdown） |
| isMain | boolean | メインファイルフラグ |
| type | string | 設計書種別 |
| tool | string | 変換ツール名 |

#### CodeFile（コードファイル）

| フィールド | 型 | 説明 |
|------------|-----|------|
| filename | string | ファイル名 |
| content | string | 行番号付きコード |

#### SystemPrompt（システムプロンプト）

| フィールド | 型 | 説明 |
|------------|-----|------|
| role | string | AIの役割定義 |
| purpose | string | 監査の目的 |
| format | string | 出力フォーマット指定 |
| notes | string | 注意事項 |

#### AuditMeta（監査メタ情報）

| フィールド | 型 | 説明 |
|------------|-----|------|
| version | string | システムバージョン |
| model_id | string | 使用モデルID |
| provider | string | LLMプロバイダー |
| input_tokens | number | 入力トークン数 |
| output_tokens | number | 出力トークン数 |
| executed_at | string | 実行日時（ISO 8601） |
| rule_files | RuleMeta[] | 規約ファイル情報 |
| program_files | ProgramMeta[] | プログラムファイル情報 |

#### StaticAnalysisViolation（静的解析違反）

| フィールド | 型 | 説明 |
|------------|-----|------|
| tool | string | 検出ツール名 |
| file | string | ファイル名 |
| line | number | 行番号 |
| column | number | 列番号 |
| severity | string | 重要度（error/warning/info） |
| rule_id | string | ルールID |
| message | string | 違反メッセージ |

---

## 7. 試験項目

### 7.1 機能試験

#### F-01: ファイルアップロード

| No | 試験項目 | 試験内容 | 期待結果 |
|----|----------|----------|----------|
| F-01-01 | Excelアップロード | .xlsxファイルをドラッグ&ドロップ | ファイル一覧に追加される |
| F-01-02 | Markdownアップロード | .mdファイルをファイル選択でアップロード | ファイル一覧に追加される |
| F-01-03 | Javaアップロード | .javaファイルをアップロード | ファイル一覧に追加される |
| F-01-04 | ファイルサイズ上限 | 10MB超のファイルをアップロード | エラーメッセージが表示される |
| F-01-05 | 複数ファイル | 複数ファイルを同時にアップロード | 全ファイルが一覧に追加される |
| F-01-06 | ファイル削除 | 一覧からファイルを削除 | ファイルが一覧から消える |

#### F-02: Excel変換

| No | 試験項目 | 試験内容 | 期待結果 |
|----|----------|----------|----------|
| F-02-01 | MarkItDown変換 | MarkItDownツールでExcel変換 | Markdownが生成される |
| F-02-02 | excel2md変換 | excel2mdツールでExcel変換 | Markdownが生成される |
| F-02-03 | AIオーディター形式 | 専用形式Excelをアップロード | スプレッドシート表示される |
| F-02-04 | 変換エラー | 不正なExcelファイル | エラーメッセージが表示される |

#### F-03: 行番号付与

| No | 試験項目 | 試験内容 | 期待結果 |
|----|----------|----------|----------|
| F-03-01 | 行番号付与 | Javaファイルに行番号付与 | 4桁右寄せ形式で付与される |
| F-03-02 | UTF-8ファイル | UTF-8エンコードファイル | 正常に処理される |
| F-03-03 | Shift_JISファイル | Shift_JISエンコードファイル | 正常に処理される |

#### F-04: AI監査実行

| No | 試験項目 | 試験内容 | 期待結果 |
|----|----------|----------|----------|
| F-04-01 | Bedrock監査 | Bedrockプロバイダーで監査実行 | 監査レポートが生成される |
| F-04-02 | Anthropic監査 | Anthropicプロバイダーで監査実行 | 監査レポートが生成される |
| F-04-03 | OpenAI監査 | OpenAIプロバイダーで監査実行 | 監査レポートが生成される |
| F-04-04 | 2回実行 | 監査が2回実行されること | 2つのタブに結果が表示される |
| F-04-05 | タイムアウト | 5分以上かかる処理 | タイムアウトエラーが発生する |
| F-04-06 | 接続エラー | 無効な認証情報で実行 | エラーメッセージが表示される |

#### F-05: 静的解析実行

| No | 試験項目 | 試験内容 | 期待結果 |
|----|----------|----------|----------|
| F-05-01 | Java解析 | Javaファイルの静的解析 | Checkstyle/PMD結果が表示される |
| F-05-02 | Python解析 | Pythonファイルの静的解析 | Ruff/Pylint結果が表示される |
| F-05-03 | ツール未インストール | 未インストールツールの場合 | スキップされる |
| F-05-04 | 解析無効化 | 静的解析を無効にして実行 | 静的解析がスキップされる |

#### F-06: 結果表示

| No | 試験項目 | 試験内容 | 期待結果 |
|----|----------|----------|----------|
| F-06-01 | NG判定 | LLM出力に「NG」含む | NG判定が表示される |
| F-06-02 | Warning判定 | LLM出力に「要確認」含む | Warning判定が表示される |
| F-06-03 | OK判定 | LLM出力に「OK」含む | OK判定が表示される |
| F-06-04 | タブ切替 | 結果タブを切り替え | 対応する結果が表示される |

#### F-07: レポート出力

| No | 試験項目 | 試験内容 | 期待結果 |
|----|----------|----------|----------|
| F-07-01 | Markdownダウンロード | レポートをダウンロード | .mdファイルが保存される |
| F-07-02 | ZIPダウンロード | ZIPでダウンロード | ZIP内に全ファイルが含まれる |
| F-07-03 | クリップボードコピー | レポートをコピー | クリップボードにコピーされる |

#### F-08: 設定管理

| No | 試験項目 | 試験内容 | 期待結果 |
|----|----------|----------|----------|
| F-08-01 | LLM設定保存 | LLM設定を変更して保存 | 次回起動時に設定が復元される |
| F-08-02 | 接続テスト | 接続テストボタン押下 | 接続結果が表示される |
| F-08-03 | 設定ファイル読込 | reviewer-config.mdを読込 | 設定が反映される |
| F-08-04 | 設計書種別追加 | 新しい種別を追加 | 種別一覧に追加される |

### 7.2 非機能試験

#### 性能試験

| No | 試験項目 | 試験内容 | 期待結果 |
|----|----------|----------|----------|
| P-01 | Excel変換時間 | 1MBのExcelファイル変換 | 10秒以内に完了 |
| P-02 | 行番号付与時間 | 10,000行のファイル処理 | 5秒以内に完了 |
| P-03 | 静的解析時間 | 100ファイルの解析 | 60秒以内に完了 |

#### セキュリティ試験

| No | 試験項目 | 試験内容 | 期待結果 |
|----|----------|----------|----------|
| S-01 | 認証情報保存 | API Keyの保存形式確認 | マスクされて表示される |
| S-02 | ファイルアップロード | 不正ファイルのアップロード | 適切にバリデーションされる |

#### 互換性試験

| No | 試験項目 | 試験内容 | 期待結果 |
|----|----------|----------|----------|
| C-01 | Chrome | Chrome最新版で動作確認 | 正常に動作する |
| C-02 | Firefox | Firefox最新版で動作確認 | 正常に動作する |
| C-03 | Safari | Safari最新版で動作確認 | 正常に動作する |
| C-04 | Edge | Edge最新版で動作確認 | 正常に動作する |

---

## 8. 制約事項・前提条件

### 8.1 制約事項

1. LLMの判定結果は参考情報であり、最終判断は人間が行う必要がある
2. 判断系ルールは絶対的な判定が困難なため、誤検出が発生する可能性がある
3. 大規模ファイルの処理はトークン制限により分割が必要な場合がある
4. 静的解析ツールは別途インストールが必要

### 8.2 前提条件

1. Node.js 20.0.0以上がインストールされていること
2. Python 3.10以上がインストールされていること
3. LLMプロバイダーの認証情報を保有していること
4. ネットワーク接続が利用可能であること

---

## 9. 用語集

| 用語 | 説明 |
|------|------|
| 判断系ルール | 意味的・主観的でLint等の静的解析では検出しづらいコーディング規約 |
| 機械検出ルール | 構文・パターンで安定的に検出可能な規約 |
| システムプロンプト | LLMの振る舞いを定義する初期指示 |
| トークン | LLMが処理するテキストの単位 |
| Bedrock | AWS提供のLLMサービス |

---

## 変更履歴

| 版 | 日付 | 変更内容 | 担当者 |
|----|------|----------|--------|
| 1.0 | 2026-01-23 | 初版作成 | - |
